--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -13,12 +13,12 @@
         <param name="android-package" value="org.apache.cordova.device.Device" />
     </feature>
     <preference name="KeepRunning" value="true" />
-    <name>HelloCordova</name>
+    <name>Pacer</name>
     <description>
         An Ionic Framework and Cordova project.
     </description>
-    <author email="hi@ionicframework" href="http://ionicframework.com/">
-      Ionic Framework Team
+    <author email="brentvatne@gmail.com" href="http://www.brentvatne.ca">
+      Brent
     </author>
     <content src="index.html" />
     <access origin="*" />
